Fix Scrollbar Issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,4 @@
-//$background-color: #111111;
-$background-color: red;
+$background-color: #111111;
 $primary-text-color: white;
 $accent-color: #EF8354;
 
